# RAGQuerySystem

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
evals/: questions.jsonl  results.jsonl  results.md
migrations/: 0001_init_vector_store.sql  0002_query_path.sql  README.md
scripts/: make_sample_pdf.py
specs/001-rag-boilerplate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-boilerplate/checklists/: requirements.md
specs/001-rag-boilerplate/contracts/: cli.md  health.yaml
specs/002-rag-query-and-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-query-and-ui/checklists/: requirements.md
specs/002-rag-query-and-ui/contracts/: cli.md  eval-set.md  query.yaml  ui.md
specs/003-pdf-upload-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-pdf-upload-ui/checklists/: requirements.md
specs/003-pdf-upload-ui/contracts/: ui.md  upload.md
specs/004-nymbl-ui-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-nymbl-ui-polish/checklists/: requirements.md
specs/004-nymbl-ui-polish/contracts/: a11y.md  css-tokens.md  error-rendering.md  typography.md
specs/005-code-review-polish/: data-model.md  eval-baseline.md  eval-final.md  findings.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-code-review-polish/checklists/: requirements.md
specs/005-code-review-polish/contracts/: constitution-compliance.md  findings-schema.md  (+1 more)
src/rag/: __init__.py  api.py  config.py  db.py  lifespan.py  log.py  migrations.py  trace.py
tests/: conftest.py
tests/integration/: test_health_live.py  test_schema_live.py  test_upload_live.py
tests/unit/: test_chunker.py  test_citation_construction.py  test_cli_stubs.py  test_config.py  test_current_doc.py  test_eval_harness.py  test_gemini_judge.py  test_gemini_retry.py  test_health.py  test_ingest_pipeline.py  test_migrations.py  test_refusal.py  test_responses.py  test_retrieval_ranking.py  test_ui_brand_contract.py  test_ui_routes.py  test_upload_concurrent.py  test_upload_progress.py  test_upload_validation.py
(+46 files in other folders)
